--- a/MyTrade/Views/Admin/AdvanceDeduction.cshtml
+++ b/MyTrade/Views/Admin/AdvanceDeduction.cshtml
@@ -38,8 +38,8 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    MTG Coin<span style="color: red">*</span>
-                                    @Html.TextBoxFor(m => m.CrAmount, new { @class = "form-control", @placeholder = "MTG Coin" })
+                                    MTG Token/USDT<span style="color: red">*</span>
+                                    @Html.TextBoxFor(m => m.CrAmount, new { @class = "form-control", @placeholder = "MTG Token/USDT" })
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -90,7 +90,7 @@
                                     <th>Sr No.</th>
                                     <th>Login Id</th>
                                     <th>Name</th>
-                                    <th>MTG Coin</th>
+                                    <th>MTG Token/USDT</th>
                                     <th>Transaction Date</th>
                                     <th>Narration</th>
                                     <th>Type</th>
