--- a/MyTrade/Views/Admin/DistributePayment.cshtml
+++ b/MyTrade/Views/Admin/DistributePayment.cshtml
@@ -74,7 +74,7 @@
                                         <th>TTP Level Income</th>
                                         <th>TPS Level Income</th>
                                         <th>SB</th>
-                                        <th>Gross MTG Coin</th>
+                                        <th>Gross MTG Token/USDT</th>
                                         @*<th>TDS Amount</th>
                                         <th>Processing</th>
                                         <th>Net Amount</th>*@
@@ -152,7 +152,7 @@
                                             <th>CurrentDate</th>
                                             <th>From LoginId</th>
                                             <th>From Name</th>
-                                            <th>MTG Coin</th>
+                                            <th>MTG Token/USDT</th>
                                             <th>Level</th>
                                             @*<th>UsedFor</th>*@
                                         </tr>
