--- a/MyTrade/Views/Admin/DistributePaymentTPS.cshtml
+++ b/MyTrade/Views/Admin/DistributePaymentTPS.cshtml
@@ -63,7 +63,7 @@
                                         <th>Login Id</th>
                                         <th>Name</th>
                                         <th>TPS</th>
-                                        <th>Gross MTG Coin</th>
+                                        <th>Gross MTG Token/USDT</th>
                                         @*<th>TDS Amount</th>
                                             <th>Processing</th>
                                             <th>Net Amount</th>*@
