--- a/MyTrade/Views/Admin/DistributedTPSDetails.cshtml
+++ b/MyTrade/Views/Admin/DistributedTPSDetails.cshtml
@@ -76,9 +76,9 @@
                                             <th>From LoginId</th>
                                             <th>To LoginId</th>
                                             <th>Payout No.</th>
-                                            <th>TopUp MTG Coin</th>
-                                            <th>Business MTG Coin</th>
-                                            <th>Income MTG Coin</th>
+                                            <th>TopUp MTG Token/USDT</th>
+                                            <th>Business MTG Token/USDT</th>
+                                            <th>Income MTG Token/USDT</th>
                                             <th>Commission Percentage</th>
                                            
                                         </tr>
@@ -154,7 +154,7 @@
                                                 <th>CurrentDate</th>
                                                 <th>From LoginId</th>
                                                 <th>From Name</th>
-                                                <th>MTG Coin</th>
+                                                <th>MTG Token/USDT</th>
                                                 <th>Level</th>
                                                 <th>Payment Type</th>
                                             </tr>
