--- a/MyTrade/Views/Admin/Generate_EPin.cshtml
+++ b/MyTrade/Views/Admin/Generate_EPin.cshtml
@@ -35,8 +35,8 @@
                             </div>
 
                             <div class="col-md-4">
-                                <label for="Amount">MTG Coin</label>
-                                @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "MTG Coin", @disabled = "disabled" })
+                                <label for="Amount">MTG Token/USDT</label>
+                                @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "MTG Token/USDT", @disabled = "disabled" })
                                 <input type="hidden" id="hdfFinal" />
                             </div>
 
@@ -47,7 +47,7 @@
                                 @Html.TextBoxFor(m => m.NoofPins, new { @class = "form-control", @placeholder = "No of Pins", @onchange = "getfinalamount();", @onkeypress = "return isNumberKey(event);" })
                             </div>
                             <div class="col-md-4">
-                                <label for="FinalAmount">Final MTG Coin</label>
+                                <label for="FinalAmount">Final MTG Token/USDT</label>
                                 @Html.TextBoxFor(m => m.FinalAmount, new { @class = "form-control", @placeholder = "Final Amount", @disabled = "disabled" })
                             </div>
                             <div class="col-md-4">
@@ -87,9 +87,9 @@
                                     <th>Name</th>
                                     <th>Package</th>
                                     <th>Total Pin</th>
-                                    <th>MTG Coin</th>
+                                    <th>MTG Token/USDT</th>
                                     @*<th>GST</th>*@
-                                    <th>Final MTG Coin</th>
+                                    <th>Final MTG Token/USDT</th>
                                     <th>Payment Mode</th>
                                     <th>Generated Date</th>
                                     @*<th>Used Pin</th>
