--- a/MyTrade/Views/Admin/LevelIncomeTr1ForAdmin.cshtml
+++ b/MyTrade/Views/Admin/LevelIncomeTr1ForAdmin.cshtml
@@ -70,7 +70,7 @@
                                         <th>To Member</th>
                                         <th>Payout No</th>
                                         <th>From Member</th>
-                                        <th>Business MTG Coin</th>
+                                        <th>Business MTG Token/USDT</th>
                                         <th>Percentage</th>
                                         <th>Income</th>
                                         <th>Level</th>
