--- a/MyTrade/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTrade/Views/Admin/PayoutRequestList.cshtml
@@ -80,10 +80,10 @@
                                         <th>Narration</th>
                                         <th>Login Id</th>
                                         <th>Name</th>
-                                        <th>Net MTG Coin</th>
+                                        <th>Net MTG Token/USDT</th>
                                         <th>Procesing Charges</th>
                                         <th>TDS</th>
-                                        <th>Gross MTG Coin</th>
+                                        <th>Gross MTG Token/USDT</th>
                                         <th>Bank Details</th>
                                         <th class="showallbankdetails" style="display:none">Bank Name</th>
                                         <th class="showallbankdetails" style="display:none">Bank Branch</th>
@@ -194,7 +194,7 @@
                 <div class="modal-body" style="color: black">
                     <div class="row">
                         <div class="col-md-12">
-                            <span style="color:red">Total MTG Coin:</span> <span style="color:red" id="total"></span>
+                            <span style="color:red">Total MTG Token/USDT:</span> <span style="color:red" id="total"></span>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
