--- a/MyTrade/Views/Admin/ROIWalletForAdmin.cshtml
+++ b/MyTrade/Views/Admin/ROIWalletForAdmin.cshtml
@@ -53,8 +53,8 @@
                                         <th>S No.</th>
                                         <th>Login Id</th>
                                         <th>Name</th>
-                                        <th>Cr MTG Coin</th>
-                                        <th>Dr MTG Coin</th>
+                                        <th>Cr MTG Token/USDT</th>
+                                        <th>Dr MTG Token/USDT</th>
                                         <th>Narration</th>
                                         <th>Date</th>
                                     </tr>
