--- a/MyTrade/Views/Admin/SponsorIncome.cshtml
+++ b/MyTrade/Views/Admin/SponsorIncome.cshtml
@@ -69,7 +69,7 @@
                                         <th>To Name</th>
                                         @*<th>Payout No</th>*@
                                         <th>From Member</th>
-                                        <th>Business MTG Coin</th>
+                                        <th>Business MTG Token/USDT</th>
                                         <th>Income</th>
                                         <th>Percentage</th>
                                         @*<th>Level</th>
