--- a/MyTrade/Views/Admin/TPSListForDistributePaymentNew.cshtml
+++ b/MyTrade/Views/Admin/TPSListForDistributePaymentNew.cshtml
@@ -60,10 +60,10 @@
                                     <th>Login Id</th>
                                     <th>Name</th>
                                     <th>TPS</th>
-                                    <th>Gross MTG Coin</th>
-                                    <th>TDS MTG Coin</th>
+                                    <th>Gross MTG Token/USDT</th>
+                                    <th>TDS MTG Token/USDT</th>
                                     <th>Processing</th>
-                                    <th>Net MTG Coin</th>
+                                    <th>Net MTG Token/USDT</th>
                                 </tr>
                             </thead>
                             <tbody>
