--- a/MyTrade/Views/Admin/TopUp.cshtml
+++ b/MyTrade/Views/Admin/TopUp.cshtml
@@ -43,8 +43,8 @@
                         </div>
                         <div class="col-md-4">
                             <input type="hidden" id="WalletAmount" value="@ViewBag.TotalWalletAmount" />
-                            <label for="Amount">MTG Coin <span style="color:red">*</span></label>
-                            @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "MTG Coin", @onkeypress = "return isNumberKey(event);", @onchange = "return CheckAmount();" })
+                            <label for="Amount">MTG Token/USDT <span style="color:red">*</span></label>
+                            @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "MTG Token/USDT", @onkeypress = "return isNumberKey(event);", @onchange = "return CheckAmount();" })
                             <span style="color:red">Min  : <span id="spfrom"></span> </span><span style="color:red;padding-left:50px"> Max : <span id="spto"></span> </span><span style="color:red;padding-left:50px"> In Multiple Of : <span id="spmul"></span></span>
                             <input type="hidden" value="@ViewBag.ToAmount" id="hdfMax" />
                             <input type="hidden" id="hdfMin" />
