--- a/MyTrade/Views/Admin/BusinessReports.cshtml
+++ b/MyTrade/Views/Admin/BusinessReports.cshtml
@@ -105,7 +105,7 @@
                                         <th>Sr No.</th>
                                         <th>Login Id</th>
                                         <th>Name</th>
-                                        <th>MTG Coin</th>
+                                        <th>MTG Token/USDT</th>
                                         <th>BV</th>
                                         <th>Level</th>
                                         <th>Date</th>
