--- a/MyTrade/Views/Admin/ROIIncomeReportsForAdmin.cshtml
+++ b/MyTrade/Views/Admin/ROIIncomeReportsForAdmin.cshtml
@@ -47,7 +47,7 @@
                                         <th>Login Id</th>
                                         <th>Name</th>
                                         <th>TopUp Date</th>
-                                        <th>TopUp MTG Coin</th>
+                                        <th>TopUp MTG Token/USDT</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
