--- a/MyTrade/Views/Admin/WalletList.cshtml
+++ b/MyTrade/Views/Admin/WalletList.cshtml
@@ -80,7 +80,7 @@
                                         @*<th>Request Code</th>*@
                                         <th>Login Id</th>
                                         <th>Name</th>
-                                        <th>MTG Coin</th>
+                                        <th>MTG Token/USDT</th>
                                         <th>Payment Mode</th>
                                         <th>Requested Date</th>
                                         <th>Status</th>
