--- a/MyTrade/Views/AdminReports/ActivateByPaymentList.cshtml
+++ b/MyTrade/Views/AdminReports/ActivateByPaymentList.cshtml
@@ -54,7 +54,7 @@
                                         <th>Sr No.</th>
                                         <th>Login Id</th>
                                         <th>Name</th>
-                                        <th>MTG Coin</th>
+                                        <th>MTG Token/USDT</th>
                                         <th>Used For</th>
                                         <th>Status</th>
                                         @*<th>BV</th>*@
