--- a/MyTrade/Views/AdminReports/RechargeListForAdmin.cshtml
+++ b/MyTrade/Views/AdminReports/RechargeListForAdmin.cshtml
@@ -54,7 +54,7 @@
                                         <th>Discription</th>
                                         <th>Partner ID</th>
                                         <th>Number</th>
-                                        <th>MTG Coin</th>
+                                        <th>MTG Token/USDT</th>
                                         <th>Status</th>
                                     </tr>
                                 </thead>
