--- a/MyTrade/Views/Master/PackageList.cshtml
+++ b/MyTrade/Views/Master/PackageList.cshtml
@@ -48,7 +48,8 @@
                                         <th>Package Type</th>
                                         <th>Product Name</th>
                                         <th>Product Price</th>
-                                        <th>BV</th>
+                                        @*<th>BV</th>*@
+                                        <th>Activation MTG Token</th>
                                         @if (Model.PackageTypeId == "2")
                                         {
                                             <th>Percentage</th>
@@ -82,7 +83,8 @@
                                                     <td>@Item.PackageTypeName</td>
                                                     <td>@Item.ProductName</td>
                                                     <td>@Item.ProductPrice</td>
-                                                    <td>@Item.BV</td>
+                                                    @*<td>@Item.BV</td>*@
+                                                    <td>@Item.ActivationMTGToken</td>
                                                     @if (Model.PackageTypeId == "2")
                                                     {
                                                         <td>@Item.ROIPercent</td>
